--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/Advantage.API/v16/.suo
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/dashboard-metrics-api/v16/.suo
+/.vs/Advantage.API/DesignTimeBuild/.dtbcache.v2
