--- a/Advantage.API/Advantage.API.csproj
+++ b/Advantage.API/Advantage.API.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
         <PrivateAssets>all</PrivateAssets>
@@ -22,6 +26,10 @@
 	  <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4"></DotNetCliToolReference>
 	  <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.2"></DotNetCliToolReference>
 	  <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.2"></DotNetCliToolReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 
