--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /.vs/slnx.sqlite
 /.vs/dashboard-metrics-api/v16/.suo
 /.vs/Advantage.API/DesignTimeBuild/.dtbcache.v2
+/.vs/Advantage.API/config/applicationhost.config
