--- a/Advantage.API.Database/Advantage.API.Database.csproj
+++ b/Advantage.API.Database/Advantage.API.Database.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200727175122_AddIdentity.cs" />
+    <Compile Remove="Migrations\20200727175122_AddIdentity.Designer.cs" />
+    <Compile Remove="Migrations\20200727180243_AddIdentity.cs" />
+    <Compile Remove="Migrations\20200727180243_AddIdentity.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.6">
       <PrivateAssets>all</PrivateAssets>
